<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sfpro_medium"
        android:includeFontPadding="false"
        android:text="@string/error"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfpro_regular"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/error_code"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/message"
        android:layout_marginTop="16dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2"/>
        <TextView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sfpro_medium"
            android:includeFontPadding="false"
            android:text="@string/close"
            android:textColor="@color/blue"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray2"/>
        <TextView
            android:id="@+id/btnSuport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sfpro_medium"
            android:includeFontPadding="false"
            android:text="@string/contact_support"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>