<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="config"
            type="app.propubg.login.model.AppConfig" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/info_sheet_back"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/infoBlock1"
            android:src="@drawable/app_logo_orange"
            tools:ignore="ContentDescription"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"/>
        <LinearLayout
            android:id="@+id/infoBlock1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_us"
                android:fontFamily="@font/sfpro_medium"
                android:textSize="23sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="17sp"
                android:layout_marginTop="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{config.config.socialLink_Instagram}"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:includeFontPadding="false"
                android:layout_marginTop="5dp"
                android:textColorLink="@color/blue"
                android:autoLink="web"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telegram"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="17sp"
                android:layout_marginTop="23dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{config.config.socialLink_Telegram}"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textColorLink="@color/blue"
                android:autoLink="web"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoBlock2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_questions"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{config.config.supportLinkTelegram}"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textColorLink="@color/blue"
                android:autoLink="web"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_us"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="17sp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{config.config.donateLink}"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textColorLink="@color/blue"
                android:autoLink="web"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="17sp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{config.config.socialLinkCreator_Instagram}"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:textColorLink="@color/blue"
                android:autoLink="web"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>