<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="user"
            type="app.propubg.login.model.UserRealm" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/header_layout"
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="23dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_regular"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/text_gray1"
                android:layout_marginTop="6dp"
                android:text="@string/password_old"
                android:layout_marginStart="17dp"/>
            <EditText
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputPasswordOld"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:background="@drawable/edittext_menu_back"
                tools:ignore="Autofill,LabelFor,TextFields" />
            <TextView
                android:visibility="invisible"
                android:id="@+id/errorPasswordWrong"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_regular"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:layout_marginTop="8dp"
                android:text="@string/password_wrong"
                android:layout_marginStart="17dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_regular"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/text_gray1"
                android:layout_marginTop="9dp"
                android:text="@string/password_new"
                android:layout_marginStart="17dp"/>
            <EditText
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputPasswordNew"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:background="@drawable/edittext_menu_back"
                tools:ignore="Autofill,LabelFor,TextFields" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_regular"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/text_gray1"
                android:layout_marginTop="25dp"
                android:text="@string/password_confirm"
                android:layout_marginStart="17dp"/>
            <EditText
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputPasswordConfirm"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:background="@drawable/edittext_menu_back"
                tools:ignore="Autofill,LabelFor,TextFields" />
            <TextView
                android:visibility="invisible"
                android:id="@+id/errorPasswordNotMatch"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_regular"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:layout_marginTop="8dp"
                android:text="@string/password_not_match"
                android:layout_marginStart="17dp"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="23dp"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            app:cornerRadius="30dp"
            android:padding="16dp"
            android:text="@string/btn_confirm"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:id="@+id/btnLogout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>