<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="22dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="21dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/save"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:gravity="center"
            tools:ignore="ContentDescription" />
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/headerTitle"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sfpro_medium"
            android:includeFontPadding="false"
            android:padding="12dp"
            android:textSize="18sp"
            android:gravity="center"
            tools:ignore="RelativeOverlap" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>