<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/header_layout"
            android:id="@+id/headerUpdate"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rocket"
                android:layout_gravity="center_horizontal"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_are_better"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                android:fontFamily="@font/sfpro_medium"
                android:layout_marginTop="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_app"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/text_gray1"
                android:fontFamily="@font/sfpro_light"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:padding="12dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/orange"
                app:cornerRadius="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/sfpro_medium"
                android:includeFontPadding="false"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>